--- a/guitarchord/index.html
+++ b/guitarchord/index.html
@@ -24,7 +24,7 @@
           <options values="C C# D D# E F F# G G# A A# B"></options>
         </ChordRoot>
         <ChordVariation type="select">
-          <options values="maj maj7 7 min min7 sus aug dim"></options>
+          <options values="maj maj7 7 min min7 sus aug aug7 dim dim7"></options>
         </ChordVariation>
         <ManualChord type="text"></ManualChord>
       </form>
