nambah manual tuning

--- a/guitarchord/index.html
+++ b/guitarchord/index.html
@@ -27,14 +27,15 @@
           <options values="maj maj7 7 min min7 sus aug aug7 dim dim7"></options>
         </ChordVariation>
         <ManualChord type="text"></ManualChord>
+        <ManualTuning type="text"></ManualTuning>
       </form>
-      <Guitar orientation="vertical">
-        <Fret tune="E"></Fret>
-        <Fret tune="A"></Fret>
-        <Fret tune="D"></Fret>
-        <Fret tune="G"></Fret>
-        <Fret tune="B"></Fret>
-        <Fret tune="E"></Fret>
+      <Guitar orientation="vertical" frets="13">
+        <String tune="E"></String>
+        <String tune="A"></String>
+        <String tune="D"></String>
+        <String tune="G"></String>
+        <String tune="B"></String>
+        <String tune="E"></String>
       </Guitar>
     </main>
     <footer>
