--- a/guitarchord/index.html
+++ b/guitarchord/index.html
@@ -32,7 +32,7 @@
           <ManualChord type="text"></ManualChord>
           <ManualTuning type="text"></ManualTuning>
           <button onclick="reset()">Reset</button>
-          <button class="primary" onclick="play()">Play</button>
+          <button class="button-primary" onclick="play()">Play</button>
         </if>
       </form>
       <Guitar orientation="vertical" frets="13" with-sound="true">
