--- a/guitarchord/index.html
+++ b/guitarchord/index.html
@@ -5,6 +5,8 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <title>Guitar Chord Variation</title>
+  <!-- icon generated from https://romannurik.github.io/AndroidAssetStudio/icons-launcher.html -->
+  <link rel="icon" type="image/png" href="ss.png">
   <link href="https://fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
   <link rel="stylesheet" href="bower_components/normalize-css/normalize.css">
   <link rel="stylesheet" href="bower_components/skeleton-framework/dist/skeleton.min.css">
