kasih index yg jelas dikit la

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <title>rafgugi.github.io</title>
+</head>
+<body>
+  <a href="guitarchord">Guitar chord variation</a>
+  <a href="guess-the-number">Guess The Number</a>
+</body>
+</html>
