masukin mob project di daftar isi

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 <body>
   <a href="guitarchord">Guitar chord variation</a>
   <a href="guess-the-number">Guess The Number</a>
+  <a href="mob">Foundation Project</a>
 </body>
 </html>
