--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <body>
   <a href="guitarchord">Guitar chord variation</a>
   <a href="guess-the-number">Guess The Number</a>
-  <a href="mob">Foundation Project</a>
+  <a href="family-grid">Family Grid</a>
+  <a href="mob" hidden>Foundation Project</a>
 </body>
 </html>
