--- a/family-grid/index.html
+++ b/family-grid/index.html
@@ -1,16 +1,1 @@
-<!doctype html>
-<html lang="en">
-<head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <meta name="description" content="Family Grid created using create-react-app"/>
-  <link rel="manifest" href="/manifest.json"/>
-  <title>Family Grid</title>
-  <script defer="defer" src="static/js/main.edf008cc.js"></script>
-  <link href="static/css/main.68f2170c.css" rel="stylesheet">
-</head>
-<body>
-  <noscript>You need to enable JavaScript to run this app.</noscript>
-  <div id="root"></div>
-</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="description" content="Family Grid created using create-react-app"/><link rel="manifest" href="manifest.json"/><title>Family Grid</title><script defer="defer" src="static/js/main.4857efd9.js"></script><link href="static/css/main.68f2170c.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
